(library
 (name filter_file_test)
 (modules filter_file_test)
 (libraries core expect_test_helpers_core filter_file)
 (inline_tests
  (deps ../out-cl100k_base.tikitoken.txt))
 (preprocess
  (pps ppx_jane ppx_blob ppx_expect)))

;; ---------------------------------------------------------------------------
;; Webpage → Markdown conversion (MVP)                                         
;; ---------------------------------------------------------------------------

(library
 (name webpage_markdown_test)
 (modules webpage_markdown_test)
 (libraries core expect_test_helpers_core ochat.webpage_markdown)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Reward model judge tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_reward_model_judge_test)
 (modules meta_prompting_reward_model_judge_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Rubric critic judge tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_rubric_critic_test)
 (modules meta_prompting_rubric_critic_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Pairwise arena judge basic tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_pairwise_arena_test)
 (modules meta_prompting_pairwise_arena_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Self-consistency judge tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_self_consistency_test)
 (modules meta_prompting_self_consistency_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Aggregate function additional property tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_aggregate_prop_test)
 (modules meta_prompting_aggregate_prop_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Refined prompt diff expect test
;; ---------------------------------------------------------------------------

;; ---------------------------------------------------------------------------
;; Meta-prompting – [join] monad law property tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_join_prop_test)
 (modules recursive_mp_join_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Refined prompt diff expect test
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_diff_test)
 (modules meta_prompting_diff_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompt factory structure tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompt_factory_test)
 (modules meta_prompt_factory_test prompt_factory_online_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Relative-path resolution tests for Chat_response.Fetch
;; ---------------------------------------------------------------------------

(library
 (name relative_path_resolution_test)
 (modules relative_path_resolution_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.unix
  chat_response
  ochat.io)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Export ChatMarkdown correctness test
;; ---------------------------------------------------------------------------

(library
 (name export_chatmd_correctness_test)
 (modules export_chatmd_correctness_test)
 (libraries
  core
  expect_test_helpers_core
  ochat.io
  ochat.session
  chat_tui
  chat_response
  eio
  eio_main
  eio.unix)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Session reset tests
;; ---------------------------------------------------------------------------

(library
 (name session_reset_test)
 (modules session_reset_test)
 (libraries core expect_test_helpers_core ochat.session)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Markdown crawler tests
;; ---------------------------------------------------------------------------

(library
 (name markdown_crawler_test)
 (modules markdown_crawler_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.unix
  markdown_crawler)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Cmdline mode tests (Phase 3)
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_cmdline_mode_test)
 (modules chat_tui_cmdline_mode_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Undo / Redo tests (Phase 2)
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_undo_test)
 (modules chat_tui_undo_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – command-mode Phase 0 smoke test
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_command_mode_test)
 (modules chat_tui_command_mode_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Normal mode cursor motion tests (Phase 1)
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_normal_mode_cursor_test)
 (modules chat_tui_normal_mode_cursor_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Parallel tool-call buffer integration test
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_parallel_tool_calls_test)
 (modules chat_tui_parallel_tool_calls_test)
 (libraries core expect_test_helpers_core notty notty_scroll_box chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Redraw throttle unit tests
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_redraw_throttle_test)
 (modules chat_tui_redraw_throttle_test)
 (libraries core expect_test_helpers_core chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Chat-TUI – Sanitize/Wrap pipeline tests
;; ---------------------------------------------------------------------------

(library
 (name chat_tui_sanitize_wrap_test)
 (modules chat_tui_sanitize_wrap_test)
 (libraries core expect_test_helpers_core chat_tui)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; OAuth dynamic client registration tests
;; ---------------------------------------------------------------------------

(library
 (name oauth_dynamic_registration_test)
 (modules oauth_dynamic_registration_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  ochat.mcp_client
  ochat.mcp_server_core
  ochat.mcp_server_http
  ochat.mcp_types)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP server integration test (real HTTP server)
;; ---------------------------------------------------------------------------

(library
 (name mcp_server_integration_test)
 (modules mcp_server_integration_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  ochat.mcp_server_core
  ochat.mcp_server_http
  ochat.mcp_client
  ochat.mcp_types
  piaf)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP transport – HTTP SSE & Session-ID tests
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport_http_sse_test)
 (modules mcp_transport_http_sse_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  ochat.mcp_transport)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP transport – HTTP implementation tests
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport_http_test)
 (modules mcp_transport_http_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  ochat.mcp_transport)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP client tests over HTTP transport
;; ---------------------------------------------------------------------------

(library
 (name mcp_client_http_test)
 (modules mcp_client_http_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  piaf
  uri
  ochat.mcp_client
  ochat.mcp_types)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chatmd_parser_test)
 (modules chatmd_parser_test)
 (libraries core expect_test_helpers_core chatmd)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chat_response_cache_test)
 (modules chat_response_cache_test)
 (libraries core expect_test_helpers_core chat_response)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP stub server (executable used by client tests)
;; ---------------------------------------------------------------------------

(library
 (name markdown_indexing_test)
 (modules markdown_indexing_test)
 (libraries
  core
  expect_test_helpers_core
  markdown_snippet
  vector_db
  md_index_catalog
  owl
  eio
  eio_main
  eio.unix
  stdio)
 (inline_tests
  (deps ../out-cl100k_base.tikitoken.txt))
 (preprocessor_deps
  (file ../out-cl100k_base.tikitoken.txt))
 (preprocess
  (pps ppx_jane ppx_blob ppx_expect)))

(executable
 (name mcp_stub_server)
 (public_name mcp_stub_server)
 (modules mcp_stub_server)
 (libraries core jsonaf jsonaf_ext ochat.mcp_types))

;; ---------------------------------------------------------------------------
;; MCP client high-level tests (uses stub server)
;; ---------------------------------------------------------------------------

(library
 (name mcp_client_test)
 (modules mcp_client_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  ochat.mcp_client
  ochat.mcp_types)
 (inline_tests
  (deps %{bin:mcp_stub_server}))
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Session persistence tests
;; ---------------------------------------------------------------------------

(library
 (name session_persistence_test)
 (modules session_persistence_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.unix
  ochat.session)
 ;; Inline expect tests
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chat_response_converter_test)
 (modules chat_response_converter_test)
 (libraries
  core
  expect_test_helpers_core
  chat_response
  eio
  eio_main
  eio.mock
  eio.unix)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chatml_runtime_test)
 (modules chatml_runtime_test)
 (libraries core chatml chatml_resolver chatml_builtin_modules)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name chatml_typechecker_test)
 (modules chatml_typechecker_test)
 (libraries
  core
  chatml
  chatml_typechecker
  chatml_resolver
  chatml_builtin_modules)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

(library
 (name apply_patch_test)
 (modules apply_patch_test)
 (libraries core expect_test_helpers_core apply_patch)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Apply_patch success snippets test
;; ---------------------------------------------------------------------------

(library
 (name apply_patch_snippets_test)
 (modules apply_patch_snippets_test)
 (libraries core expect_test_helpers_core apply_patch)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; MCP transport – stdio implementation tests
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport_stdio_test)
 (modules mcp_transport_stdio_test)
 (libraries
  core
  expect_test_helpers_core
  eio
  eio_main
  eio.mock
  eio.unix
  ochat.mcp_transport)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Meta-prompting – Monad & Evaluator property tests
;; ---------------------------------------------------------------------------

(library
 (name meta_prompting_quickcheck_test)
 (modules meta_prompting_quickcheck_test)
 (libraries core expect_test_helpers_core ochat.meta_prompting)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))

;; ---------------------------------------------------------------------------
;; Notty rendering unit tests
;; ---------------------------------------------------------------------------

(library
 (name notty_render_test)
 (modules notty_render_test)
 (libraries core expect_test_helpers_core notty)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_expect)))
