(library
 (name chat_response)
 (public_name ochat.chat_response)
 (modules
  cache
  config
  converter
  ctx
  driver
  fetch
  tool_call
  response_loop
  tool
  fork
  compact_history)
 (libraries
  core
  openai
  jsonaf
  io
  ochat_function
  definitions
  functions
  chatmd
  lru_cache
  ttl_lru_cache
  bin_prot_utils_eio
  nottui
  lwd
  nottui-pretty
  eio
  eio.unix
  mcp_tool
  mcp_client
  mcp_types
  webpage_markdown)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))
