(library
 (name chat_response)
 (public_name ochat.chat_response)
 (modules
  cache
  config
  converter
  ctx
  driver
  in_memory_stream
  fetch
  moderation
  moderator_manager
  tool_call
  response_loop
  tool
  fork
  compact_history)
 (libraries
  core
  openai
  jsonaf
  io
  ochat_function
  definitions
  functions
  chatmd
  chatml
  chatml_moderator_runtime
  session
  lru_cache
  ttl_lru_cache
  bin_prot_utils_eio
  nottui
  lwd
  eio
  eio.unix
  mcp_tool
  mcp_client
  mcp_types
  webpage_markdown)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))
