(library
 (name chat_tui)
 (public_name ochat.chat_tui)
 (modules
  util
  types
  model
  renderer
  persistence
  stream
  cmd
  controller
  controller_types
  controller_normal
  controller_shared
  controller_cmdline
  path_completion
  conversation
  snippet
  app
  attachments
  export
  ui_helpers)
 (libraries
  core
  openai
  eio
  notty
  notty_eio
  notty_scroll_box
  io
  chat_response
  chatmd
  meta_prompting
  ochat.notty_scroll_box
  ochat.session
  context_compaction)
 (preprocess
  (pps ppx_jane)))
