(library
 (name chat_tui)
 (public_name ochat.chat_tui)
 (modules
  util
  highlight_styles
  highlight_theme
  highlight_tm_engine
  highlight_tm_loader
  highlight_grammars
  highlight_registry
  markdown_fences
  types
  model
  renderer
  persistence
  stream
  cmd
  controller
  controller_types
  controller_normal
  controller_shared
  controller_cmdline
  redraw_throttle
  path_completion
  conversation
  snippet
  app
  attachments
  export
  ui_helpers)
 (libraries
  core
  jsonaf
  textmate-language
  openai
  eio
  notty
  notty_eio
  notty_scroll_box
  io
  chat_response
  chatmd
  meta_prompting
  ochat.notty_scroll_box
  ochat.session
  context_compaction)
 (preprocess
  (pps ppx_jane)))
