(library
 (name chat_tui)
 (public_name ochat.chat_tui)
 (modules
  util
  highlight_styles
  highlight_theme
  highlight_tm_engine
  highlight_tm_loader
  highlight_grammars
  highlight_registry
  renderer_highlight_engine
  markdown_fences
  types
  model
  renderer_component_history
  renderer_component_input_box
  renderer_component_message
  renderer_component_status_bar
  renderer_lang
  renderer_page_chat
  renderer_pages
  renderer
  persistence
  stream
  cmd
  controller
  controller_types
  controller_normal
  controller_shared
  controller_cmdline
  redraw_throttle
  path_completion
  conversation
  snippet
  app_runtime
  app_events
  app_context
  app_submit
  app_compaction
  app_streaming
  app_stream_apply
  app_reducer
  app
  attachments
  export
  ui_helpers)
 (libraries
  core
  jsonaf
  textmate-language
  openai
  eio
  notty
  notty_eio
  notty_scroll_box
  io
  chat_response
  chatmd
  meta_prompting
  ochat.notty_scroll_box
  ochat.session
  context_compaction)
 (preprocess
  (pps ppx_jane))
 (inline_tests))
