(library
 (name chatml)
 (public_name ochat.chatml)
 (modules
  chatml_lang
  chatml_eval
  chatml_parse
  chatml_slot_layout
  chatml_lexer
  chatml_parser
  chatml_debug_log
  frame_env
  chatml_value_codec
  chatml_builtin_spec
  chatml_builtin_surface)
 (libraries core jsonaf menhirLib source)
 (preprocess
  (pps ppx_jane)))

(library
 (name chatml_resolver)
 (public_name ochat.chatml_resolver)
 (modules chatml_resolver)
 (libraries core chatml chatml_typechecker)
 (preprocess
  (pps ppx_jane)))

(library
 (name chatml_typechecker)
 (public_name ochat.chatml_typechecker)
 (modules chatml_typechecker)
 (libraries core chatml)
 (preprocess
  (pps ppx_jane)))

(library
 (name chatml_builtin_modules)
 (public_name ochat.chatml_builtin_modules)
 (modules chatml_builtin_modules)
 (libraries chatml core)
 (preprocess
  (pps ppx_jane)))

(library
 (name chatml_moderator_runtime)
 (public_name ochat.chatml_moderator_runtime)
 (modules chatml_moderator_runtime)
 (libraries
  core
  chatml
  chatml_typechecker
  chatml_resolver
  chatml_builtin_modules)
 (preprocess
  (pps ppx_jane)))

(library
 (name chatml_runtime)
 (public_name ochat.chatml_runtime)
 (modules chatml_runtime)
 (libraries core chatml chatml_moderator_runtime)
 (preprocess
  (pps ppx_jane)))

(menhir
 (modules chatml_parser)
 (flags --table --dump))

(ocamllex chatml_lexer)
