;; ---------------------------------------------------------------------------
;; MCP – Core types (client + server shared)
;; ---------------------------------------------------------------------------

(library
 (name mcp_types)
 (public_name ochat.mcp_types)
 (modules mcp_types)
 (libraries core jsonaf_ext)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

;; ---------------------------------------------------------------------------
;; MCP – Streamable HTTP server (Phase-2)
;; ---------------------------------------------------------------------------

(library
 (name mcp_server_http)
 (public_name ochat.mcp_server_http)
 (modules mcp_server_http)
 (libraries
  core
  core_unix
  eio
  piaf
  jsonaf_ext
  ochat.mcp_types
  ochat.mcp_server_core
  ochat.mcp_server_router
  ochat.oauth2)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

;; ---------------------------------------------------------------------------
;; MCP – helper that turns *.chatmd files into prompts + agent tools
;; ---------------------------------------------------------------------------

(library
 (name mcp_prompt_agent)
 (public_name ochat.mcp_prompt_agent)
 (modules mcp_prompt_agent)
 (libraries
  core
  core_unix
  jsonaf_ext
  ochat.mcp_types
  ochat.mcp_server_core
  chat_response ; need driver + ctx
  chatmd ; chatmd parser
  eio
  eio.unix)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

;; ---------------------------------------------------------------------------
;; MCP – low-level transports (stdio, later http)
;; ---------------------------------------------------------------------------

(library
 (name mcp_transport)
 (public_name ochat.mcp_transport)
 (modules
  mcp_transport
  mcp_transport_interface
  mcp_transport_stdio
  mcp_transport_http)
 (modules_without_implementation mcp_transport mcp_transport_interface)
 (libraries
  core
  jsonaf_ext
  eio
  eio.unix
  piaf
  uri
  cstruct
  ochat.oauth2
  base64
  mirage-crypto-rng
  mirage-crypto-rng.unix)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

;; ---------------------------------------------------------------------------
;; MCP – tool wrapper (client-side helper)
;; ---------------------------------------------------------------------------

(library
 (name mcp_tool)
 (public_name ochat.mcp_tool)
 (modules mcp_tool)
 (libraries core ochat.mcp_types ochat.mcp_client ochat_function jsonaf_ext)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

;; ---------------------------------------------------------------------------
;; MCP – high-level synchronous client (stdio phase-1)
;; ---------------------------------------------------------------------------

(library
 (name mcp_client)
 (public_name ochat.mcp_client)
 (modules mcp_client)
 (libraries
  core
  core_unix
  jsonaf_ext
  eio
  eio.unix
  ochat.mcp_types
  ochat.mcp_transport)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

;; ---------------------------------------------------------------------------
;; MCP – server core registry (Phase-1)
;; ---------------------------------------------------------------------------

(library
 (name mcp_server_core)
 (public_name ochat.mcp_server_core)
 (modules mcp_server_core)
 (libraries core core_unix jsonaf_ext ochat.mcp_types)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))

;; ---------------------------------------------------------------------------
;; MCP – server router (Phase-1)
;; ---------------------------------------------------------------------------

(library
 (name mcp_server_router)
 (public_name ochat.mcp_server_router)
 (modules mcp_server_router)
 (libraries
  core
  jsonaf_ext
  eio
  eio.unix
  base64
  ochat.mcp_types
  ochat.mcp_server_core
  ochat.mime)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))
