;; ---------------------------------------------------------------------------
;; OAuth2 helper stack (client side)
;; ---------------------------------------------------------------------------

(library
 (name oauth2)
 (public_name ochat.oauth2)
 (modules
  oauth2_types
  oauth2_http
  oauth2_client_credentials
  oauth2_manager
  oauth2_pkce
  oauth2_pkce_flow
  oauth2_server_types
  oauth2_server_storage
  oauth2_server_client_storage
  oauth2_server_routes
  oauth2_client_store)
 (libraries
  io
  core
  core_unix
  eio
  eio.unix
  piaf
  uri
  base64
  digestif
  jsonaf_ext
  mirage-crypto-rng
  mirage-crypto-rng.unix
  mirage-crypto
  cstruct)
 (wrapped false)
 (preprocess
  (pps ppx_jane ppx_jsonaf_conv)))
